--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'news_app/style.css' %}">
 </head>
-<body>
+<body class="js-modal-container">
 <!--header-->
-    <div class="container-fluid primary_color">
+    <div class="container-fluid primary_color" style="index: 9">
         <div class="row ">
             <div class="col-sm-1">
                 <img src="{% static 'media/logo.png' %}" style="width: 200px; height: 63px; margin: 6px 16px">
@@ -18,17 +18,47 @@
             <div class="col-sm-10" >
 
             </div>
-            <div class="col-sm-1" style="padding: 0.7% 0 0 4%;">
+            <div  class="col-sm-1 js-option-button" style="padding: 0.7% 0 0 4%;">
                 <img src="{{ request.user.profile_pic.url }}" style="width: 50px; height: 50px; border-radius: 50%;">
-                <div class="options_account_list primary_color">
-                    <p style="margin: 0;padding: 6px 0">logn in</p>
-                    <p style="margin: 0; padding: 6px 0">sign in</p>
+                <div class="options_account_list">
+                    <p class="option_item">profile & edit</p>
+                    <p class="option_item">sign in</p>
+                    <p class="option_item">history</p>
+                    <p class="option_item">logn out</p>
                 </div>
             </div>
+<!--            <div class="col-sm-1 js-option-button" style="padding: 0.7% 0 0 4%;">-->
+<!--                <img src="{{ request.user.profile_pic.url }}" style="width: 50px; height: 50px; border-radius: 50%;">-->
+<!--                <div class="options_account_list primary_color">-->
+<!--                    <p class="option_item" style="padding: 8px 24px">logn in</p>-->
+<!--                    <p class="option_item" style="padding: 8px 24px">sign in</p>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
 {% block content %}
 
 {% endblock  %}
+<script>
+    const optionBtn = document.querySelector('.js-option-button')
+    const modalContainer = document.querySelector('.js-modal-container')
+    const optionOpen = document.querySelector('.options_account_list')
+
+    function showOptionList() {
+        optionOpen.classList.add('open')
+    }
+    function removeOptionList() {
+        optionOpen.classList.remove('open')
+    }
+    optionBtn.addEventListener('click', showOptionList)
+    modalContainer.addEventListener('click', removeOptionList)
+
+    optionOpen.addEventListener('click', function (event) {
+        event.stopPropagation()
+    })
+    optionBtn.addEventListener('click', function (event) {
+        event.stopPropagation()
+    })
+</script>
 </body>
 </html>
