--- a/news_app/static/news_app/style.css
+++ b/news_app/static/news_app/style.css
@@ -1,11 +1,44 @@
+/*header*/
+
+.options_account_list {
+    position: absolute;
+    font-size: 22px;
+    right: 1%;
+    top: 11%;
+    box-shadow: -3px 3px 10px 0px #a98fd9;
+    z-index: 1;
+    display: none;
+}
+.options_account_list.open {
+    display: block;
+}
+.options_account_list::after {
+    content: "";
+    position: absolute;
+    right: 3px;
+    top: -58px;
+    border-width: 29px 30px;
+    border-style: solid;
+    border-color: transparent transparent #e2d9f3 transparent;
+}
+.option_item {
+    margin: 0;
+    padding: 8px 14px;
+    background-color: #e2d9f3;
+    color: #a98fd9 ;
+}
+.option_item:hover {
+    background-color: #a98fd9;
+    color: #e2d9f3;
+}
+
+/*body*/
 .primary_color {
-    background-color: #a98fd9 !important;
+    background-color: #a98fd9;
 }
 .category_button.active {
     background-color: #e2d9f3 !important;
-}
-.category_title {
-    display: none;
+    color: #a98fd9 !important;
 }
 .category_title {
     display: none;
@@ -29,13 +62,7 @@
     background-color: #a98fd9;
     color: white;
     border: none;
-    transition: 0.2s;
 }
-
-.border_radius_button p {
-    transition: 0.2s;
-}
-
 .border_radius_news_item {
     width: 100%;
     border-top-left-radius: 40px;
@@ -46,18 +73,16 @@
 }
 .hover_color_button:hover {
     background-color: #e2d9f3 !important;
-    transition: 0.2s;
+    color: #a98fd9 ;
+    transition: ease-in 200ms,
+    ease-out 200ms;
+}
+.plus_button:hover .plus_icon{
+    color: #a98fd9 ;
+}
+.plus_icon {
+    color: white ;
 }
 
-.hover_color_button:hover p {
-    color: #a98eda;
-    transition: 0.2s;
-}
-.options_account_list {
-    position: absolute;
-    width: 100px;
-    font-size: 22px;
-    right: 1%;
-    top: 11%;
-    display: none;
-}
+
+
