--- a/news_app/templates/news_app/home.html
+++ b/news_app/templates/news_app/home.html
@@ -2,13 +2,13 @@
 {% block content %}
 <!--body-->
 <div class="container-fluid">
-    <div class="row">
+    <div class="row" style="padding-bottom: 200px">
         <div class="col-sm-3">
 
         </div>
         <div class="col-sm-6">
             <div class="row">
-                <p style="font-size: 50px; text-align: center; margin: 40px 0; color: #545454;">フォローしているカテゴリー</p>
+                <p style="font-size: 50px; text-align: center; margin: 40px 0; color: #545454">フォローしているカテゴリー</p>
                 <button class="border_radius_button hover_color_button" style="width: 100%; height: 110px; margin-bottom: 40px;">
                     <p style="font-size: 40px; margin: 0; text-align: center">スポーツ</p>
                 </button>
@@ -20,11 +20,15 @@
                 </button>
             </div>
         </div>
-        <div class="col-sm-3">
-            <button class="hover_color_button primary_color" style=" width: 80px; height: 80px; border-radius: 50%; border: none; position: absolute; bottom: 16%; right: 14%;">
-                <i class="fa-solid fa-plus" style="font-size: 50px; color: white;"></i>
+        <div class="col-sm-3" style="position: relative">
+            <button class="hover_color_button primary_color plus_button" style=" width: 80px; height: 80px; border-radius: 50%; border: none; position: absolute; top: calc(100% - 70px);; right: 220px;">
+                <i class="fa-solid fa-plus plus_icon" style="font-size: 50px;"></i>
             </button>
         </div>
     </div>
+
 </div>
 {% endblock %}
+<!--    <img src="{{user.profile_pic.url}}" style="width: 100px; height: 100px; border-radius: 50%;">-->
+<!--    <p><a href="{% url 'user:logout_verify' %} " >Log out</a></p>-->
+<!--    <p><a href="{% url 'user:edit-profile' %}">Edit</a></p>-->
