--- a/news_app/templates/news_app/home.html
+++ b/news_app/templates/news_app/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <!--body-->
-<div class="container-fluid">
+<div class="container-fluid" style="margin-top: 4%;">
     <div class="row" style="padding-bottom: 200px">
         <div class="col-sm-3">
 
@@ -12,7 +12,8 @@
             <div class="row">
                 <p style="font-size: 50px; text-align: center; margin: 40px 0; color: #545454">{% blocktrans %}フォローしているカテゴリー{% endblocktrans %}</p>
                 <button class="border_radius_button hover_color_button" style="width: 100%; height: 110px; margin-bottom: 40px;">
-                    <p style="font-size: 40px; margin: 0; text-align: center">スポーツ</p>
+
+                     <a href="http://127.0.0.1:8000/news/"><p style="font-size: 40px; margin: 0; text-align: center">スポーツ</p></a>
                 </button>
                 <button class="border_radius_button hover_color_button" style="width: 100; height: 110px; margin-bottom: 40px;">
                     <p style="font-size: 40px; margin: 0; text-align: center">ビジネス</p>
@@ -29,14 +30,10 @@
             </div>
         </div>
         <div class="col-sm-3" style="position: relative">
-            <button class="hover_color_button primary_color plus_button" style=" width: 80px; height: 80px; border-radius: 50%; border: none; position: absolute; top: calc(100% - 70px);; right: 220px;">
+            <button class="hover_color_button primary_color plus_button" style=" width: 80px; height: 80px; border-radius: 50%; border: none; position: absolute; bottom: 0; right: 220px;">
                 <i class="fa-solid fa-plus plus_icon" style="font-size: 50px;"></i>
             </button>
         </div>
     </div>
-
 </div>
 {% endblock %}
-<!--    <img src="{{user.profile_pic.url}}" style="width: 100px; height: 100px; border-radius: 50%;">-->
-<!--    <p><a href="{% url 'user:logout_verify' %} " >Log out</a></p>-->
-<!--    <p><a href="{% url 'user:edit-profile' %}">Edit</a></p>-->
