--- a/news_app/templates/news_app/news_page.html
+++ b/news_app/templates/news_app/news_page.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% block content %}
 <!--body-->
-<div class="container-fluid">
+<div class="container-fluid"  style="margin-top: 4%">
     <div class="row" style="padding: 20px 0 0 30px;">
         <div class="col-sm-2" style=" border-right: solid 1px;">
             <button class="category_button hover_color_button categories" style="margin-bottom: 20px;" url-id='sports'>スポーツ</button>
