--- a/news_app/static/news_app/style.css
+++ b/news_app/static/news_app/style.css
@@ -4,8 +4,9 @@
     position: absolute;
     text-decoration: none;
     font-size: 22px;
-    right: 1%;
-    top: 124%;
+    margin-right: 8px;
+    right: 0%;
+    top: 11%;
     box-shadow: -3px 3px 10px 0px #a98fd9;
     z-index: 1;
     display: none;
