--- a/user/templates/user/change-pass.html
+++ b/user/templates/user/change-pass.html
@@ -1,18 +1,10 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<<<<<<< Updated upstream
-    <title>{% blocktranslate %}　パスワード確認 {% endblocktranslate %}</title>
-</head>
-<body>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">{% blocktranslate %}送信{% endblocktranslate %}</button>
-</form>
-=======
+
     <title>confirm password</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'login.css' %}">
@@ -36,8 +28,5 @@
 
     </div>
 </div>
-
-
->>>>>>> Stashed changes
 </body>
 </html>
