happyouzen last updates

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,9 +13,12 @@
 
     <div class="container-fluid primary_color" style="index: 9">
         <div class="row ">
-
+            <a href="{% url 'news_app:home' %}">
             <div class="col-sm-1">
+                            <a href="{% url 'news_app:home' %}">
                 <img src="{% static 'media/logo.png' %}" style="width: 200px; height: 63px; margin: 6px 16px">
+                                                </a>
+
             </div>
             <div class="col-sm-9" >
 
