--- a/news_app/templates/news_app/home.html
+++ b/news_app/templates/news_app/home.html
@@ -11,23 +11,15 @@
         <div class="col-sm-6">
             <div class="row">
                 <p style="font-size: 50px; text-align: center; margin: 40px 0; color: #545454">{% blocktrans %}フォローしているカテゴリー{% endblocktrans %}</p>
+
+                {% for c in categories %}
                 <a href="http://127.0.0.1:8000/news/">
                 <button class="border_radius_button hover_color_button" style="width: 100%; height: 110px; margin-bottom: 40px;">
-                     <p style="font-size: 40px; margin: 0; text-align: center">スポーツ</p>
+                     <p style="font-size: 40px; margin: 0; text-align: center">{{ c.category }}</p>
                 </button>
                     </a>
-                <button class="border_radius_button hover_color_button" style="width: 100; height: 110px; margin-bottom: 40px;">
-                    <p style="font-size: 40px; margin: 0; text-align: center">ビジネス</p>
-                </button>
-                <button class="border_radius_button hover_color_button" style="width: 100; height: 110px; margin-bottom: 40px;">
-                    <p style="font-size: 40px; margin: 0; text-align: center">テクノロジー</p>
-                </button>
-                <button class="border_radius_button hover_color_button" style="width: 100; height: 110px; margin-bottom: 40px;">
-                    <p style="font-size: 40px; margin: 0; text-align: center">テクノロジー</p>
-                </button>
-                <button class="border_radius_button hover_color_button" style="width: 100; height: 110px; margin-bottom: 40px;">
-                    <p style="font-size: 40px; margin: 0; text-align: center">テクノロジー</p>
-                </button>
+                {% endfor %}
+
             </div>
         </div>
         <div class="col-sm-3" style="position: relative">
