--- a/news_app/templates/news_app/news-detail.html
+++ b/news_app/templates/news_app/news-detail.html
@@ -1,39 +1,6 @@
 {% extends 'main/base.html' %}
-<<<<<<< Updated upstream
 {% load i18n %}
 {% block content %}
-
-<b><h1 id="title">{{ news.title }}</h1></b>
-<img src="{{ news.photo }}" style="max-width: 300px;">
-<h3 id="description">Description: <b>{{ news.description }}<b>　　<a href="{{ news.url }}">{% blocktranslate %}　続きを読む {% endblocktranslate %}</a></h3>
-
-<a href="{% url 'news_app:save' id=news.id %}"><b>{% blocktranslate %}　保存する {% endblocktranslate %}</b></a>
-<ul>
-    {% for comment in comments %}
-        <li>
-            <p><b>{{ comment.user.username }}</b></p><p>{{ comment.created_at }}</p>
-            <p>{{ comment.comment }}</p>
-        </li>
-    {% endfor %}
-</ul>
-
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">{% blocktranslate %}　送信 {% endblocktranslate %}</button>
-</form>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        const descript = document.getElementById("description");
-        const title = document.getElementById("title");
-        const D = descript.innerHTML;
-        const T = title.innerHTML;
-        console.log(D);
-=======
-{% block content %}
-
-<p>{{news.title}}</p>
 <div class="row" style="margin-top: 5%;">
     <div class="col-sm-2"></div>
     <div class="col-sm-8">
@@ -91,55 +58,25 @@
         {% endfor %}
         </ul>
     </div>
-
-
     <div class="col-sm-2"></div>
 </div>
-<script>
-    
-</script>
->>>>>>> Stashed changes
+<!--<h3 id="description">Description: <b>{{ news.description }}<b>　　<a href="{{ news.url }}">{% blocktranslate %}　続きを読む {% endblocktranslate %}</a></h3>-->
 
-<!--        async function translateText() {-->
-<!--            const url = 'https://microsoft-translator-text.p.rapidapi.com/translate?to%5B0%5D=vi&api-version=3.0&profanityAction=NoAction&textType=plain';-->
-<!--            const options = {-->
-<!--                method: 'POST',-->
-<!--                headers: {-->
-<!--                    'Content-Type': 'application/json',-->
-<!--                    'X-RapidAPI-Key': '729ad8cb4bmshc2f04df14ef2a65p1e623djsne81bc94a5d3d',-->
-<!--                    'X-RapidAPI-Host': 'microsoft-translator-text.p.rapidapi.com'-->
-<!--                },-->
-<!--                body: JSON.stringify([-->
-<!--                    {-->
-<!--                        Text: `${T}`-->
-<!--                    }-->
-<!--                ])-->
-<!--            };-->
+<!--<a href="{% url 'news_app:save' id=news.id %}"><b>{% blocktranslate %}　保存する {% endblocktranslate %}</b></a>-->
+<!--<ul>-->
+<!--    {% for comment in comments %}-->
+<!--        <li>-->
+<!--            <p><b>{{ comment.user.username }}</b></p><p>{{ comment.created_at }}</p>-->
+<!--            <p>{{ comment.comment }}</p>-->
+<!--        </li>-->
+<!--    {% endfor %}-->
+<!--</ul>-->
 
-<!--            try {-->
-<!--                const response = await fetch(url, options);-->
+<!--<form method="post">-->
+<!--    {% csrf_token %}-->
+<!--    {{ form.as_p }}-->
+<!--    <button type="submit">{% blocktranslate %}　送信 {% endblocktranslate %}</button>-->
+<!--</form>-->
 
-<!--                if (response.ok) {-->
-<!--                    const result = await response.json();-->
-
-<!--                    if (result && result.length > 0 && result[0].translations) {-->
-<!--                        const translationsValue = result[0].translations[0].text;-->
-<!--                        console.log(translationsValue);-->
-<!--                        title.innerHTML = translationsValue;-->
-<!--                    } else {-->
-<!--                        console.error('Error: Invalid response format');-->
-<!--                    }-->
-<!--                } else {-->
-<!--                    console.error(`Error: ${response.status} - ${response.statusText}`);-->
-<!--                }-->
-<!--            } catch (error) {-->
-<!--                console.error(error);-->
-<!--            }-->
-<!--        }-->
-
-<!--        // Call the function-->
-<!--        translateText();-->
-<!--    });-->
-</script>
 
 {% endblock %}
