--- a/news_app/templates/news_app/saved-history-news-list.html
+++ b/news_app/templates/news_app/saved-history-news-list.html
@@ -4,24 +4,26 @@
 
 {% block content %}
 
-{% for i in news %}
-                <div class="row" style="padding: 20px 0; border-top: #c1c1c1 solid 1px;">
-                    <div class="col-sm-2">
-                        <img src="{{ i.photo }}" alt="No photo" style="width: 100%; height: 60%;">
-                    </div>
-                    <div class="col-sm-10">
-                        <h3><a href="{% url 'news_app:news_detail' i.id %}"> {% blocktranslate %}タイトル{% endblocktranslate %}: {{ i.title }}</a></h3>
-                        <p>{{ i.source }}</p>
-                        <p>{% blocktranslate %}カテゴリー{% endblocktranslate %}: <b>{{ i.category.category }}</b></p>
-                        <div class="save">
-                            <a href="{% url 'news_app:delete' id=news.id arg='saved' %}"><i class="fa-solid fa-trash" style="color: #a98fd9;"></i></a>
-                        </div>
-                        <p>
-                            <i class="fa-solid fa-trash"></i>
-                        </p>
-                    </div>
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8">
+        {% for i in news %}
+            <div class="row" style="padding: 20px 0; border-top: #c1c1c1 solid 1px;">
+                <div class="col-sm-2">
+                    <img src="{{ i.photo }}" alt="No photo" style="width: 100%; height: 60%;">
                 </div>
-            {% endfor %}
+                <div class="col-sm-10">
+                    <h3><a href="{% url 'news_app:news_detail' i.id %}"> {% blocktranslate %}タイトル{% endblocktranslate %}: {{ i.title }}</a></h3>
+                    <p>{{ i.source }}</p>
+                    <p>{% blocktranslate %}カテゴリー{% endblocktranslate %}: <b>{{ i.category.category }}</b></p>
+                    <div class="save" style="font-size: 22px; width: 4%;">
+                        <a href="{% url 'news_app:delete' id=i.id arg=arg %}"><i class="fa-solid fa-trash" style="color: #a98fd9;"></i></a>
+                    </div>
 
-
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    <div class="col-sm-2"></div>
+</div>
 {% endblock %}
