--- a/news_app/templates/news_app/saved-history-news-list.html
+++ b/news_app/templates/news_app/saved-history-news-list.html
@@ -4,26 +4,65 @@
 
 {% block content %}
 
-<div class="row">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-8">
-        {% for i in news %}
-            <div class="row" style="padding: 20px 0; border-top: #c1c1c1 solid 1px;">
-                <div class="col-sm-2">
-                    <img src="{{ i.photo }}" alt="No photo" style="width: 100%; height: 60%;">
-                </div>
-                <div class="col-sm-10">
-                    <h3><a href="{% url 'news_app:news_detail' i.id %}"> {% blocktranslate %}タイトル{% endblocktranslate %}: {{ i.title }}</a></h3>
-                    <p>{{ i.source }}</p>
-                    <p>{% blocktranslate %}カテゴリー{% endblocktranslate %}: <b>{{ i.category.category }}</b></p>
-                    <div class="save" style="font-size: 22px; width: 4%;">
-                        <a href="{% url 'news_app:delete' id=i.id arg=arg %}"><i class="fa-solid fa-trash" style="color: #a98fd9;"></i></a>
-                    </div>
-
-                </div>
+<div class="row" style="margin-top: 6%">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6" style="box-shadow: 0px 0px 22px 0 #a98fd9; padding: 0;">
+        <div class="header_HisBook" style="display: flex; justify-content: space-between; background-color: #a98fd9; width: 100%; height: 20%;">
+            <img id="profilePicPreview" src="{% if request.user.profile_pic %}{{ request.user.profile_pic.url }}{% else %}{% static 'path/to/default/image.jpg' %}{% endif %}" alt="Profile Preview" style="width: 120px; height: 120px; border-radius: 50%; margin: 3% 3% 20% 3%">
+            <div style="padding-right: 54%;">
+                <p style="font-size: 40px; margin: 32px 0 0 0; color: white;">{{request.user}}</p>
+                <p style="font-size: 22px; font-weight: 700; color: white;">mail</p>
             </div>
-        {% endfor %}
+            <p style="font-size: 30px; margin: 1% 2% 0 0;">
+                <a style="color: white;" href="{% url 'user:edit_profile' %}"><i class="fa-solid fa-pen-to-square"></i></a>
+            </p>
+        </div>
+        <div class="body_HisBook">
+            <div class="button_wrap" style="display: flex; justify-content: center; background-color: #b7a9d0;">
+                <p class="history_button title">履歴</p>
+                <p class="bookmark_button title active">ブックマーク</p>
+            </div>
+
+            <!--History-->
+            <div class="history_wrap">
+                {% for i in news %}
+                    <div class="row" style="padding: 20px 0px; margin: 0 12px;; border-top: #c1c1c1 solid 1px;">
+                        <div class="col-sm-3">
+                            <img src="{{ i.photo }}" alt="No photo" style="width: 100%; height: 60%;">
+                        </div>
+                        <div class="col-sm-9">
+                            <p style="font-size: 22px;"><a href="{% url 'news_app:news_detail' i.id %}"> {% blocktranslate %}タイトル{% endblocktranslate %}: {{ i.title }}</a></p>
+                            <p>{{ i.source }}</p>
+                            <p>{% blocktranslate %}カテゴリー{% endblocktranslate %}: <b>{{ i.category.category }}</b></p>
+                            <div class="save" style="font-size: 22px; width: 4%;">
+                                <a href="{% url 'news_app:delete' id=i.id arg=arg %}"><i class="fa-solid fa-trash" style="color: #a98fd9;"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+
+            <!--Bookmark-->
+            <div class="bookmark_wrap active">
+                {% for i in news %}
+                    <div class="row" style="padding: 20px 0px; margin: 0 12px;; border-top: #c1c1c1 solid 1px;">
+                        <div class="col-sm-3">
+                            <img src="{{ i.photo }}" alt="No photo" style="width: 100%; height: 60%;">
+                        </div>
+                        <div class="col-sm-9">
+                            <p style="font-size: 22px;"><a href="{% url 'news_app:news_detail' i.id %}"> {% blocktranslate %}タイトル{% endblocktranslate %}: {{ i.title }}</a></p>
+                            <p>{{ i.source }}</p>
+                            <p>{% blocktranslate %}カテゴリー{% endblocktranslate %}: <b>{{ i.category.category }}</b></p>
+                            <div class="save" style="font-size: 22px; width: 4%;">
+                                <a href="{% url 'news_app:delete' id=i.id arg=arg %}"><i class="fa-solid fa-trash" style="color: #a98fd9;"></i></a>
+                            </div>
+
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
-    <div class="col-sm-2"></div>
+    <div class="col-sm-3"></div>
 </div>
 {% endblock %}
