--- a/news_app/templates/news_app/saved-history-news-list.html
+++ b/news_app/templates/news_app/saved-history-news-list.html
@@ -7,24 +7,24 @@
 <div class="row" style="margin-top: 6%">
     <div class="col-sm-3"></div>
     <div class="col-sm-6" style="box-shadow: 0px 0px 22px 0 #a98fd9; padding: 0;">
-        <div class="header_HisBook" style="display: flex; justify-content: space-between; background-color: #a98fd9; width: 100%; height: 20%;">
-            <img id="profilePicPreview" src="{% if request.user.profile_pic %}{{ request.user.profile_pic.url }}{% else %}{% static 'path/to/default/image.jpg' %}{% endif %}" alt="Profile Preview" style="width: 120px; height: 120px; border-radius: 50%; margin: 3% 3% 20% 3%">
+        <div class="header_HisBook" style="display: flex; justify-content: space-between; background-color: #a98fd9; width: 100%; height: 180px;">
+            <img id="profilePicPreview" src="{% if request.user.profile_pic %}{{ request.user.profile_pic.url }}{% else %}{% static 'path/to/default/image.jpg' %}{% endif %}" alt="Profile Preview" style="width: 120px; height: 120px; border-radius: 50%; margin: 28px;">
             <div style="padding-right: 54%;">
                 <p style="font-size: 40px; margin: 32px 0 0 0; color: white;">{{request.user}}</p>
                 <p style="font-size: 22px; font-weight: 700; color: white;">mail</p>
             </div>
-            <p style="font-size: 30px; margin: 1% 2% 0 0;">
-                <a style="color: white;" href="{% url 'user:edit_profile' %}"><i class="fa-solid fa-pen-to-square"></i></a>
+            <p class="HisBook_edit_btn">
+                <a href="{% url 'user:edit_profile' %}"><i class="fa-solid fa-pen-to-square"></i></a>
             </p>
         </div>
         <div class="body_HisBook">
             <div class="button_wrap" style="display: flex; justify-content: center; background-color: #b7a9d0;">
-                <p class="history_button title">履歴</p>
-                <p class="bookmark_button title active">ブックマーク</p>
+                <p class="history_button fromRightToLeft title active">履歴</p>
+                <p class="bookmark_button fromLeftToRight title ">ブックマーク</p>
             </div>
 
             <!--History-->
-            <div class="history_wrap">
+            <div class="history_wrap active">
                 {% for i in news %}
                     <div class="row" style="padding: 20px 0px; margin: 0 12px;; border-top: #c1c1c1 solid 1px;">
                         <div class="col-sm-3">
@@ -43,7 +43,7 @@
             </div>
 
             <!--Bookmark-->
-            <div class="bookmark_wrap active">
+            <div class="bookmark_wrap ">
                 {% for i in news %}
                     <div class="row" style="padding: 20px 0px; margin: 0 12px;; border-top: #c1c1c1 solid 1px;">
                         <div class="col-sm-3">
@@ -65,4 +65,29 @@
     </div>
     <div class="col-sm-3"></div>
 </div>
+<script>
+    const HisBtn = document.querySelector(".history_button")
+    const BookBtn = document.querySelector(".bookmark_button")
+    const btnActive = document.querySelector(".title.active")
+
+    function ShowBookmark() {
+        const HisContent = document.querySelector(".history_wrap")
+        const BookContent = document.querySelector(".bookmark_wrap")
+        HisContent.classList.remove('active')
+        HisBtn.classList.remove('active')
+        BookContent.classList.add('active')
+        BookBtn.classList.add('active')
+    }
+    function ShowHistory() {
+        const HisContent = document.querySelector(".history_wrap")
+        const BookContent = document.querySelector(".bookmark_wrap")
+        BookContent.classList.remove('active')
+        BookBtn.classList.remove('active')
+        HisContent.classList.add('active')
+        HisBtn.classList.add('active')
+    }
+
+    BookBtn.addEventListener('click', ShowBookmark)
+    HisBtn.addEventListener('click', ShowHistory)
+</script>
 {% endblock %}
