--- a/news_app/templates/news_app/categories.html
+++ b/news_app/templates/news_app/categories.html
@@ -2,7 +2,7 @@
     {% load i18n %}
 
 {% block content %}
-<div class="container-fluid" style="margin-top: 4%;">
+<div class="container-fluid" style="margin-top: 8%;">
     <div class="row" style="padding-bottom: 200px">
         <div class="col-sm-3">
 
@@ -10,11 +10,17 @@
         <div class="col-sm-6">
             <div class="row">
                 {% for c in categories %}
-                <a href="http://127.0.0.1:8000/news/">
-                <button class="border_radius_button hover_color_button" style="width: 100%; height: 110px; margin-bottom: 40px;">
-                     <p style="font-size: 40px; margin: 0; text-align: center">{{ c.category }}</p>
+                <button class="border_radius_button hover_color_button" style="display: flex; width: 100%; height: 110px; margin-bottom: 40px; justify-content: space-between; align-items: center;">
+                    <p style="font-size: 40px; margin: 0; text-align: center; width: 100%; padding-left: 50px;">{{ c.category }}</p>
+                    <div class="icon_wrap">
+                        <p class="category_plus icon_item" >
+                            <i class="fa-solid fa-plus"></i>
+                        </p>
+<!--                        <p class="category_minus" >-->
+<!--                            <i class="fa-solid fa-minus"></i>-->
+<!--                        </p>-->
+                    </div>
                 </button>
-                    </a>
                 {% endfor %}
 
             </div>
