fixed home page hover error

--- a/news_app/templates/news_app/categories.html
+++ b/news_app/templates/news_app/categories.html
@@ -16,7 +16,7 @@
                         <p class="category_plus icon_item" >
                             <i class="fa-solid fa-plus"></i>
                         </p>
-<!--                        <p class="category_minus" >-->
+<!--                        <p class="category_minus icon_item" >-->
 <!--                            <i class="fa-solid fa-minus"></i>-->
 <!--                        </p>-->
                     </div>
