--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -11,15 +11,15 @@
 </head>
 <body class="js-modal-container">
 
-    <div class="container-fluid primary_color" style="position: fixed; top: 0; border-bottom: 6px solid white;">
+    <div class="container-fluid primary_color" style="position: fixed; top: 0; border-bottom: 6px solid white; z-index: 9;">
         <div class="row ">
-            <div class="col-sm-1">
+            <div class="col-sm-2">
                 <a href="{% url 'news_app:home' %}">
                     <img src="{% static 'media/logo.png' %}" style="width: 200px; height: 63px; margin: 6px 16px">
                 </a>
 
             </div>
-            <div class="col-sm-9" >
+            <div class="col-sm-8" >
             </div>
             <div class="col-sm-1">
                 <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
