--- a/news_app/templates/news_app/home.html
+++ b/news_app/templates/news_app/home.html
@@ -3,26 +3,22 @@
 
 {% block content %}
 <!--body-->
-<div class="container-fluid" style="margin-top: 4%;">
+<div class="container-fluid" style="margin-top: 4%; position: relation; z-index: 0">
     <div class="row" style="padding-bottom: 200px">
         <div class="col-sm-3">
 
         </div>
         <div class="col-sm-6">
-            <div class="row">
-                <p style="font-size: 50px; text-align: center; margin: 40px 0; color: #545454">{% blocktrans %}フォローしているカテゴリー{% endblocktrans %}</p>
-
-                {% for c in categories %}
+            <p style="font-size: 50px; text-align: center; margin: 40px 0; color: #545454">{% blocktrans %}フォローしているカテゴリー{% endblocktrans %}</p>
+            {% for c in categories %}
                 <a href="http://127.0.0.1:8000/news/">
-                <button class="border_radius_button hover_color_button" style="width: 100%; height: 110px; margin-bottom: 40px;">
-                     <p style="font-size: 40px; margin: 0; text-align: center">{{ c.category }}</p>
-                </button>
-                    </a>
-                {% endfor %}
-
-            </div>
+                    <button class="border_radius_button hover_color_button" style="width: 100%; height: 110px; margin-bottom: 40px;">
+                         <p style="font-size: 40px; margin: 0; text-align: center">{{ c.category }}</p>
+                    </button>
+                </a>
+            {% endfor %}
         </div>
-        <div class="col-sm-3" style="position: relative">
+        <div class="col-sm-3" style="position: relative;">
             <a href="{% url 'news_app:categories' %}">
             <button class="hover_color_button primary_color plus_button" style=" width: 80px; height: 80px; border-radius: 50%; border: none; position: absolute; bottom: 0; right: 220px;">
                 <i class="fa-solid fa-plus plus_icon" style="font-size: 50px;"></i>
