--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -7,7 +7,7 @@
     <title>{{ page_name }}</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'news_app/style.css' %}">
+    <link rel="stylesheet" href="{% static '/style.css' %}">
 </head>
 <body class="js-modal-container">
 
