--- a/user/templates/user/email-confirmation.html
+++ b/user/templates/user/email-confirmation.html
@@ -7,7 +7,7 @@
     <title>Email form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'login.css' %}">
-    <link rel="stylesheet" href="{% static 'news_app/style.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <div class="row" style="margin-top: 6%">
