--- a/user/templates/user/logout-verify.html
+++ b/user/templates/user/logout-verify.html
@@ -3,12 +3,10 @@
 <head>
     {% load static %}
     <meta charset="UTF-8">
-<<<<<<< Updated upstream
     <title>{{ page_name }}</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'news_app/style.css' %}">
-=======
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>{% blocktranslate %} ログアウト{% endblocktranslate %}</title>
 </head>
 <body>
