--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -42,15 +42,14 @@
                 {% if request.user.username %}
                     <img class="nav_bar_avtar" src="{{ request.user.profile_pic.url }}">
                     <div class="options_account_list">
-                        <p><a class="option_item" href="{% url 'user:edit_profile' %}">profile edit</a></p>
-                        <p><a class="option_item" href="{% url 'news_app:history' %}">history</a></p>
-                        <p class="js-logout"><a class="option_item" href="#">logn out</a></p>
+                        <p><a class="option_item" href="{% url 'news_app:history_saved' %}">{% blocktrans %}プロファイル{% endblocktrans %}</a></p>
+                        <p class="js-logout"><a class="option_item" href="#">{% blocktrans %}ログアウト{% endblocktrans %}</a></p>
                     </div>
                 {% else %}
                     <img class="nav_bar_avtar" src="{% static 'media/default.jpg' %}">
                     <div class="options_account_list">
-                        <p><a class="option_item" href="{% url 'user:login' %}">logn in</a></p>
-                        <p><a class="option_item" href="{% url 'user:email_confirm' %}">sign in</a></p>
+                        <p><a class="option_item" href="{% url 'user:login' %}">{% blocktrans %}ログイン{% endblocktrans %}</a></p>
+                        <p><a class="option_item" href="{% url 'user:email_confirm' %}">{% blocktrans %}サインイン{% endblocktrans %}</a></p>
                     </div>
                 {% endif %}
             </div>
@@ -75,6 +74,13 @@
             </div>
         </div>
     </div>
+    {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} mt-4" role="alert">
+            {{ message }}
+        </div>
+        {% endfor %}
+    {% endif %}
 
     {% block content %}
 
