--- a/user/templates/user/change-pass.html
+++ b/user/templates/user/change-pass.html
@@ -1,16 +1,9 @@
+{% extends 'main/base.html' %}
 {% load static %}
 {% load i18n %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
 
-    <title>confirm password</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'login.css' %}">
-    <link rel="stylesheet" href="{% static '/style.css' %}">
-</head>
-<body>
+{% block content %}
+
 <div class="row" style="margin-top: 6%">
     <div class="col-sm-4"></div>
     <div class="col-sm-4 login_container" style="padding: 2%; border: none">
@@ -28,5 +21,4 @@
 
     </div>
 </div>
-</body>
-</html>
+{% endblock content %}
