--- a/user/templates/user/code-verify.html
+++ b/user/templates/user/code-verify.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
+{% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} mt-4" role="alert">
+            {{ message }}
+        </div>
+        {% endfor %}
+    {% endif %}
 <div class="row" style="margin-top: 6%">
     <div class="col-sm-4">
     </div>
@@ -20,7 +27,7 @@
                 <br>
             <input type="text" name="{{ form.code.name }}" id="{{ form.code.id_for_label }}" class="input_form"/>
             <div style="display: flex; justify-content: space-between; margin-top: 4%;">
-                <p><a href="#" style="font-size: 16px;">コードをもう一度送信</a></p>
+                <p><a href="{% url 'user:resend_code' %}" style="font-size: 16px;">コードをもう一度送信</a></p>
                 <button class="category_button hover_color_button"  type="submit" style="width: 30%">次に</button>
             </div>
         </form>
