--- a/user/templates/user/edit-profile.html
+++ b/user/templates/user/edit-profile.html
@@ -1,16 +1,8 @@
+{% extends 'main/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-    {% load i18n %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>edit profile</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'login.css' %}">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-</head>
-<body>
+{% load i18n %}
+
+{% block content %}
 <div class="row" style="margin-top: 5%">
     <div class="col-sm-4"></div>
     <div class="col-sm-4 login_container" style="padding: 2%; border: none">
@@ -65,5 +57,4 @@
 </script>
 
 
-</body>
-</html>
+{% endblock content %}
