--- a/user/templates/user/logout-verify.html
+++ b/user/templates/user/logout-verify.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <title>{{ page_name }}</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <title>{% blocktranslate %} ログアウト{% endblocktranslate %}</title>
-</head>
-<body>
+{% extends 'main/base.html' %}
+{% load static %}
+{% load i18n %}
+
+{% block content %}
+
     <div class="container_logout_verify">
         <div class="row">
             <div class="col-sm-4"></div>
@@ -29,5 +23,5 @@
             <div class="col-sm-4"></div>
         </div>
     </div>
-</body>
-</html>
+
+{% endblock content %}
