--- a/user/templates/user/set-password.html
+++ b/user/templates/user/set-password.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="{% static '/style.css' %}">
 </head>
 <body>
+{% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} mt-4" role="alert">
+            {{ message }}
+        </div>
+        {% endfor %}
+    {% endif %}
 <div class="row" style="margin-top: 6%">
     <div class="col-sm-4"></div>
     <div class="col-sm-4 login_container" style="padding: 2%; border: none">
