--- a/user/templates/user/email-confirmation.html
+++ b/user/templates/user/email-confirmation.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Email form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'login.css' %}">
@@ -17,10 +18,10 @@
         </div>
         {% endfor %}
     {% endif %}
-<div class="row" style="margin-top: 6%">
+<div class="row login_wrap">
     <div class="col-sm-4">
     </div>
-    <div class="col-sm-4 login_container" style="padding: 2%; border: none">
+    <div class="col-sm-4 login_container">
         <p class="login_label">アカウントを作成する</p>
         <form method="post">
             {% csrf_token %}
@@ -28,7 +29,7 @@
                 <br>
             <input type="text" name="{{ form.email.name }}" id="{{ form.email.id_for_label }}" class="input_form"/>
             <div style="display: flex; justify-content: center; margin-top: 4%;">
-                <button class="category_button hover_color_button"  type="submit" style="width: 30%">次に</button>
+                <button class="category_button hover_color_button login_button"  type="submit" style="width: 30%">次に</button>
             </div>
         </form>
     </div>
