--- a/news_app/templates/news_app/saved-history-news-list.html
+++ b/news_app/templates/news_app/saved-history-news-list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="row" style="margin-top: 6%">
+<div class="row HisBook_container">
     <div class="col-sm-3"></div>
     <div class="col-sm-6" style="box-shadow: 0px 0px 22px 0 #a98fd9; padding: 0;">
         <div class="header_HisBook" style="display: flex; justify-content: space-around; background-color: #a98fd9; width: 100%; height: 180px;">
@@ -27,11 +27,11 @@
             <div class="history_wrap active">
                 {% for i in history %}
                     <div class="row" style="padding: 20px 0px; margin: 0 12px;; border-top: #c1c1c1 solid 1px;">
-                        <div class="col-sm-3">
-                            <img src="{{ i.photo }}" alt="No photo" style="width: 100%; height: 60%;">
+                        <div class="col-sm-3 HisBook_item_pic">
+                            <img src="{{ i.photo }}" alt="No photo">
                         </div>
                         <div class="col-sm-9">
-                            <p style="font-size: 22px;"><a href="{% url 'news_app:news_detail' i.id %}"> {% blocktranslate %}タイトル{% endblocktranslate %}: {{ i.title }}</a></p>
+                            <p class="HisBook_item_title"><a href="{% url 'news_app:news_detail' i.id %}"> {% blocktranslate %}タイトル{% endblocktranslate %}: {{ i.title }}</a></p>
                             <p>{{ i.source }}</p>
                             <p>{% blocktranslate %}カテゴリー{% endblocktranslate %}: <b>{{ i.category.category }}</b></p>
                             <div class="save" style="font-size: 22px; width: 4%;">
@@ -46,11 +46,11 @@
             <div class="bookmark_wrap ">
                 {% for i in saved_news %}
                     <div class="row" style="padding: 20px 0px; margin: 0 12px;; border-top: #c1c1c1 solid 1px;">
-                        <div class="col-sm-3">
-                            <img src="{{ i.photo }}" alt="No photo" style="width: 100%; height: 60%;">
+                        <div class="col-sm-3 HisBook_item_pic">
+                            <img src="{{ i.photo }}" alt="No photo">
                         </div>
                         <div class="col-sm-9">
-                            <p style="font-size: 22px;"><a href="{% url 'news_app:news_detail' i.id %}"> {% blocktranslate %}タイトル{% endblocktranslate %}: {{ i.title }}</a></p>
+                            <p class="HisBook_item_title"><a href="{% url 'news_app:news_detail' i.id %}"> {% blocktranslate %}タイトル{% endblocktranslate %}: {{ i.title }}</a></p>
                             <p>{{ i.source }}</p>
                             <p>{% blocktranslate %}カテゴリー{% endblocktranslate %}: <b>{{ i.category.category }}</b></p>
                             <div class="save" style="font-size: 22px; width: 4%;">
